<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.gomes.moreira.guilherme.tcc.escadaslongitudinais.geometria.planta.FragmentPlanta">

    <data>

        <variable
            name="plantaViewModel"
            type="br.com.gomes.moreira.guilherme.tcc.escadaslongitudinais.geometria.planta.PlantaViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/image_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/layout_planta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">


            <ImageView
                android:id="@+id/image_dimensoes_planta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/default_start_end_margin"
                android:layout_marginEnd="@dimen/default_start_end_margin"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_escada_2_lances_2_patamares_cotas"
                android:visibility="visible" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_end_margin"
                android:layout_marginTop="@dimen/default_top_bottom_marign"
                android:layout_marginEnd="@dimen/default_start_end_margin"
                android:layout_marginBottom="@dimen/default_top_bottom_marign"
                android:fadeScrollbars="false"
                android:padding="6dp"
                android:background="@drawable/edittext_rectangle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_lpini"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/lpini_text"
                        app:helperText="@string/lpini_hint">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_Lpini"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={plantaViewModel.comprimentoPatamarInicial}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_lance"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/ll_text"
                        app:helperText="@string/ll_hint"
                        app:helperTextEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_Ll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={plantaViewModel.comprimentoLance}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_lpint"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/lint_text"
                        app:helperText="@string/lint_hint"
                        app:helperTextEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_Lint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={plantaViewModel.comprimentoPatamarIntermediario}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_largura"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/larg_text"
                        app:helperText="@string/larg_hint"
                        app:helperTextEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_Larg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={plantaViewModel.larguraTotal}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_apoio_esquerdo"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/apoioEsquerda_text"
                        app:helperText="@string/apoioEsquerda_hint"
                        app:helperTextEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_apoioEsquerda"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={plantaViewModel.baseApoioEsquerdo}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_apoio_direito"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:hint="@string/apoioDireita_text"
                        app:helperText="@string/apoioDireita_hint"
                        app:helperTextEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_apoioDireita"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={plantaViewModel.baseApoioDireito}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </RelativeLayout>
</layout>