<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="br.com.gomes.moreira.guilherme.tcc.escadaslongitudinais.geometria.corte.CorteFragment">

    <data>
        <variable
            name="corteViewModel"
            type="br.com.gomes.moreira.guilherme.tcc.escadaslongitudinais.geometria.corte.CorteViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/image_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layout_corte"
            android:visibility="invisible">


            <ImageView
                android:id="@+id/image_dimensoes_verticais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/default_start_end_margin"
                android:layout_marginEnd="@dimen/default_start_end_margin"
                android:src="@drawable/geometria_corte_escada_1_lances_1_patamar_int_cotas"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginTop="@dimen/default_top_bottom_marign"
                android:layout_marginBottom="@dimen/default_top_bottom_marign"
                android:layout_marginStart="@dimen/default_start_end_margin"
                android:layout_marginEnd="@dimen/default_start_end_margin"
                android:fadeScrollbars="false"
                android:background="@drawable/edittext_rectangle"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_pe_direito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pd_text"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        app:helperText="@string/lpini_hint"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_Pd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={corteViewModel.peDireito}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_espessura"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/h_text"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        app:helperText="@string/h_hint"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_h"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={corteViewModel.espessura}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_altura_apoio_esquerdo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/h_apoioEsquerda_text"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        app:helperText="@string/h_apoioEsquerda_hint"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_hApoioEsquerda"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={corteViewModel.alturaApoioEsquerdo}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_altura_apoio_direito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/h_apoioDireita_text"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        app:helperText="@string/h_apoioDireita_hint"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_hApoioDireito"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={corteViewModel.alturaApoioDireito}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>



</layout>