<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".geometria.degraus.DegrausFragment">

    <data>

        <variable
            name="degrausViewModel"
            type="br.com.gomes.moreira.guilherme.tcc.escadaslongitudinais.geometria.degraus.DegrausViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/image_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layout_corte"
            android:visibility="invisible">


            <ImageView
                android:id="@+id/image_dimensoes_verticais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/default_start_end_margin"
                android:layout_marginEnd="@dimen/default_start_end_margin"
                android:src="@drawable/geometria_degraus"
                />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:layout_marginTop="@dimen/default_top_bottom_marign"
                android:layout_marginBottom="@dimen/default_top_bottom_marign"
                android:layout_marginStart="@dimen/default_start_end_margin"
                android:layout_marginEnd="@dimen/default_start_end_margin"
                android:fadeScrollbars="false"
                android:background="@drawable/edittext_rectangle"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_piso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/piso_text"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        app:helperText="@string/piso_hint"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_Piso"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={degrausViewModel.piso}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_espelho"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/espelho_text"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        app:helperText="@string/espelho_hint"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_espelho"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:text="@={degrausViewModel.espelho}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/button_dimensionar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_start_end_margin"
                        android:layout_marginStart="@dimen/default_start_end_margin"
                        android:text="@string/sugerir"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:onClick="@{() -> degrausViewModel.sugerirGeometria()}"/>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>
</layout>